// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeSelf renders 0 1`] = `
Array [
  .c0 {
  place-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: 0;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders function 1`] = `
Array [
  .c0 {
  place-self: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: has;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: has;
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders invalid theme path 1`] = `
Array [
  .c0 {
  place-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders negative number 1`] = `
Array [
  .c0 {
  place-self: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    place-self: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-self: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    place-self: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-self: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-self: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-self: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    place-self: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    place-self: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    place-self: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    place-self: July;
  }
}

@media April {
  .c0 {
    place-self: August;
  }
}

@media January {
  .c0 {
    place-self: September;
  }
}

@media April {
  .c0 {
    place-self: November;
  }
}

@media June {
  .c0 {
    place-self: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    place-self: July;
  }
}

@media April {
  .c0 {
    place-self: August;
  }
}

@media January {
  .c0 {
    place-self: September;
  }
}

@media April {
  .c0 {
    place-self: November;
  }
}

@media June {
  .c0 {
    place-self: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-self: January;
  }
}

@media April {
  .c0 {
    place-self: December;
  }
}

@media January {
  .c0 {
    place-self: April;
  }
}

@media April {
  .c0 {
    place-self: May;
  }
}

@media June {
  .c0 {
    place-self: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    place-self: January;
  }
}

@media April {
  .c0 {
    place-self: December;
  }
}

@media January {
  .c0 {
    place-self: April;
  }
}

@media April {
  .c0 {
    place-self: May;
  }
}

@media June {
  .c0 {
    place-self: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders postitive number 1`] = `
Array [
  .c0 {
  place-self: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders string 1`] = `
Array [
  .c0 {
  place-self: July;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: July;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: June;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: June;
}

<div
    className="c0"
  />,
]
`;

exports[`placeSelf renders valid theme path 1`] = `
Array [
  .c0 {
  place-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  place-self: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
